--- a/GreenDroid/res/values/gd_colors.xml
+++ b/GreenDroid/res/values/gd_colors.xml
@@ -19,7 +19,7 @@
 
 <resources>
 
-	<color name="gd_action_bar_tint">#2e6290</color>
+	<color name="gd_action_bar_tint">#2c7fba</color>
 	<color name="gd_action_bar_divider_tint">#7fff</color>
     
 </resources>
