--- a/GreenDroid/res/values/gd_strings.xml
+++ b/GreenDroid/res/values/gd_strings.xml
@@ -41,6 +41,7 @@
 	<string name="gd_settings">Settings</string>
 	<string name="gd_list">List</string>
 	<string name="gd_trashcan">Delete</string>
+	<string name="gd_ruler">Ruler</string>
 	<string name="gd_eye">See</string>
 	<string name="gd_all_friends">All friends</string>
 	<string name="gd_group">Group</string>
